--- a/HoaBanTravel/HoaBanTravel/Views/Home/Index.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                             <p class="giatien">35.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="#" id="xemthem" class="xemthem pull-right">Đăng ký</a>
+                    <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="xemthem pull-right">Đăng ký</a>
                 </div>
             </div>
             <!--Tour-->
@@ -46,7 +46,7 @@
                             <p class="giatien">50.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="#" class="xemthem pull-right">Đăng ký</a>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
                 </div>
             </div>
             <!--Tour-->
@@ -63,7 +63,7 @@
                             <p class="giatien">70.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="#" class="xemthem pull-right">Đăng ký</a>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
                 </div>
             </div>
             <!--Tour-->
@@ -80,7 +80,7 @@
                             <p class="giatien">30.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="#" class="xemthem pull-right">Đăng ký</a>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
                 </div>
             </div>
             <!--Tour-->
@@ -97,7 +97,7 @@
                             <p class="giatien">6.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="#" class="xemthem pull-right">Đăng ký</a>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
                 </div>
             </div>
             <!--Tour-->
@@ -114,7 +114,7 @@
                             <p class="giatien">4.500.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="#" class="xemthem pull-right">Đăng ký</a>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
                 </div>
             </div>
         </div>
