--- a/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout1.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout1.cshtml
@@ -38,8 +38,9 @@
                     <li class="pull-left"><a href="@Url.Action("Dulichnuocngoai","Home")">Du lịch nước ngoài</a></li>
                     <li class="pull-left"><a href="@Url.Action("Dichvudulich","Home")">Dịch vụ du lịch</a></li>
                     <li class="pull-left"><a href="@Url.Action("Contact","Home")">Liên hệ</a></li>
-                    <li class="search pull-left"><a href="#"><i class="fa fa-search"></i></a></li>
-                    <li class="phone pull-left"><a href="tel:0313999999"><i class="fa fa-phone"></i>0313-999-999</a></li>
+                    <li class="search-box pull-left"><input type="text" placeholder="Nhập thông tin cần tìm..." id="search-inp" class="form-control" /></li>
+                    <li class="search pull-left"><a id="btn-search"><i class="fa fa-search"></i></a></li>
+                    <li class="phone pull-left"><a href="tel:0313999999"><i class="fa fa-phone"></i><p id="phone-num">0313-999-999</p></a></li>
                 </ul>
             </div>
 
