--- a/HoaBanTravel/HoaBanTravel/Content/_Layout.css
+++ b/HoaBanTravel/HoaBanTravel/Content/_Layout.css
@@ -17,6 +17,7 @@ header {
             z-index: 9999;
             padding: 1em;
             background: linear-gradient(to top,rgba(0,0,0,0) 0,rgba(0,0,0,.03) 12%,rgba(0,0,0,.16) 39%,rgba(0,0,0,.2) 51%,rgba(0,0,0,.3) 100%);
+            padding: 1em 0;
         }
 
             /*Logo*/
@@ -34,6 +35,7 @@ header {
             header > .menu > .desktop > .menu {
                 list-style: none;
                 top: 3em;
+                padding: 0;
             }
 
                 /*Từng mục*/
@@ -47,8 +49,11 @@ header {
                         text-decoration: none;
                         font-weight: bold;
                         border-radius: 2em;
-                        padding: 0.2em 0.6em;
+                        padding: 0 0.6em;
                         transition: all .3s ease-in-out;
+                        height: 2em;
+                        display: table-cell;
+                        vertical-align: middle;
                     }
 
                         header > .menu > .desktop > .menu > li > a:hover {
@@ -57,6 +62,15 @@ header {
                         }
 
                 /*Tìm kiếm*/
+                header > .menu > .desktop > .menu > .search-box {
+                    padding: 0 1em 0 0;
+                }
+
+                    header > .menu > .desktop > .menu > .search-box > input {
+                        width: 10em;
+                        display: none;
+                    }
+
                 header > .menu > .desktop > .menu > .search {
                     border-left: solid 2px rgb(255, 255, 255);
                 }
@@ -64,6 +78,7 @@ header {
                     header > .menu > .desktop > .menu > .search > a {
                         padding: 0.3em 0.5em;
                         border-radius: 10em;
+                        cursor: pointer;
                     }
 
                         header > .menu > .desktop > .menu > .search > a > i {
@@ -71,23 +86,35 @@ header {
 
                 /*Điện thoại*/
                 header > .menu > .desktop > .menu > .phone {
-                    margin: 0 0 0 1em;
+                    margin: 0;
                 }
 
                     header > .menu > .desktop > .menu > .phone > a {
                         color: rgb(0, 0, 0);
                         background: rgb(255, 255, 255);
-                        border-radius: 2em;
-                        padding: 0.2em 0.5em;
+                        border-radius: 10em;
                     }
 
-                        header > .menu > .desktop > .menu > .phone > a > i {
-                            margin: 0 0.7em 0 0;
+                        header > .menu > .desktop > .menu > .phone > a:hover {
+                            background: rgb(0, 0, 0);
                         }
 
-                        header > .menu > .desktop > .menu > .phone > a:hover {
+                        header > .menu > .desktop > .menu > .phone > a > i {
+                            margin: 0;
+                            display: inline-block;
+                        }
+
+                        header > .menu > .desktop > .menu > .phone > a:hover > i {
                             color: rgb(255, 255, 255);
-                            background: rgb(0, 0, 0);
+                        }
+
+                        header > .menu > .desktop > .menu > .phone > a > p {
+                            display: inline-block;
+                            margin: 0 0 0 1em;
+                        }
+
+                        header > .menu > .desktop > .menu > .phone > a:hover > p {
+                            color: rgb(255, 255, 255);
                         }
 
     /*Banner*/
