--- a/HoaBanTravel/HoaBanTravel/Views/Home/Dulichmienbac.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Home/Dulichmienbac.cshtml
@@ -10,85 +10,98 @@
     <p class="tieude">Du lịch miền bắc</p>
     <!--Danh sách tour-->
     <article class="danhsach col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <!--Tour-->
-        <div class="tour col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <!--Ảnh tour-->
-            <img src="~/Content/images/dulich/anhtuour-1.png" alt="" class="img-responsive" />
-            <!--Thông tin-->
-            <ul class="thongtin tt-1 col-xs-12 col-sm-5 col-md-3 col-lg-3">
-                <li>Việt Nam (Viet Nam)</li>
-                <li class="vung">Tây Bắc</li>
-                <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
-                <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
-                <li><span>Ngày xuất phát:</span> 30/1/2017</li>
-                <li><span>Nơi xuất phát:</span> Hà Nội</li>
-                <li class="gia">5.300.000 vnđ</li>
-                <li class="dangky pull-right"><a href="#">Đăng ký</a></li>
-            </ul>
-        </div>
-        <!--Tour-->
-        <div class="tour col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <!--Ảnh tour-->
-            <img src="~/Content/images/dulich/anhtuour-2.png" alt="" class="img-responsive" />
-            <!--Thông tin-->
-            <ul class="thongtin tt-2 col-xs-12 col-sm-5 col-md-3 col-lg-3">
-                <li>Việt Nam (Viet Nam)</li>
-                <li class="vung">Vịnh Hạ Long</li>
-                <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
-                <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
-                <li><span>Ngày xuất phát:</span> 30/1/2017</li>
-                <li><span>Nơi xuất phát:</span> Hà Nội</li>
-                <li class="gia">5.300.000 vnđ</li>
-                <li class="dangky pull-right"><a href="#">Đăng ký</a></li>
-            </ul>
-        </div>
-        <!--Tour-->
-        <div class="tour col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <!--Ảnh tour-->
-            <img src="~/Content/images/dulich/anhtuour-3.png" alt="" class="img-responsive" />
-            <!--Thông tin-->
-            <ul class="thongtin tt-1 col-xs-12 col-sm-5 col-md-3 col-lg-3">
-                <li>Việt Nam (Viet Nam)</li>
-                <li class="vung">Chùa Bái Đính</li>
-                <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
-                <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
-                <li><span>Ngày xuất phát:</span> 30/1/2017</li>
-                <li><span>Nơi xuất phát:</span> Hà Nội</li>
-                <li class="gia">5.300.000 vnđ</li>
-                <li class="dangky pull-right"><a href="#">Đăng ký</a></li>
-            </ul>
-        </div>
-        <!--Tour-->
-        <div class="tour col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <!--Ảnh tour-->
-            <img src="~/Content/images/dulich/anhtuour-4.png" alt="" class="img-responsive" />
-            <!--Thông tin-->
-            <ul class="thongtin tt-2 col-xs-12 col-sm-5 col-md-3 col-lg-3">
-                <li>Việt Nam (Viet Nam)</li>
-                <li class="vung">Cát Bà</li>
-                <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
-                <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
-                <li><span>Ngày xuất phát:</span> 30/1/2017</li>
-                <li><span>Nơi xuất phát:</span> Hà Nội</li>
-                <li class="gia">5.300.000 vnđ</li>
-                <li class="dangky pull-right"><a href="#">Đăng ký</a></li>
-            </ul>
-        </div>
-        <!--Tour-->
-        <div class="tour col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <!--Ảnh tour-->
-            <img src="~/Content/images/dulich/anhtuour-5.png" alt="" class="img-responsive" />
-            <!--Thông tin-->
-            <ul class="thongtin tt-1 col-xs-12 col-sm-5 col-md-3 col-lg-3">
-                <li>Việt Nam (Viet Nam)</li>
-                <li class="vung">Sapa</li>
-                <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
-                <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
-                <li><span>Ngày xuất phát:</span> 30/1/2017</li>
-                <li><span>Nơi xuất phát:</span> Hà Nội</li>
-                <li class="gia">5.300.000 vnđ</li>
-                <li class="dangky pull-right"><a href="#">Đăng ký</a></li>
-            </ul>
+
+        <!--Các tour-->
+        <div class="cactour">
+            <!--Tour-->
+            <div id="tour" class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <img src="~/Content/images/trangchu/avt-tour-1.png" alt="" class="img-responsive" />
+                <div class="thongtin row">
+                    <ul class="text">
+                        <li class="vung">Hà Nội - Tây Bắc</li>
+                        <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
+                        <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
+                        <li><span>Ngày xuất phát:</span> 30/1/2017</li>
+                        <li class="gia">5.300.000 vnđ</li>
+                    </ul>
+                    <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="xemthem pull-right">Đăng ký</a>
+                </div>
+            </div>
+
+            <!--Tour-->
+            <div class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <img src="~/Content/images/trangchu/avt-tour-2.png" alt="" class="img-responsive" />
+                <div class="thongtin row">
+                    <ul class="text">
+                        <li class="vung">Hà Nội - Vịnh Hạ Long</li>
+                        <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
+                        <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
+                        <li><span>Ngày xuất phát:</span> 30/1/2017</li>
+                        <li class="gia">5.300.000 vnđ</li>
+                    </ul>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                </div>
+            </div>
+
+            <!--Tour-->
+            <div class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <img src="~/Content/images/trangchu/avt-tour-3.png" alt="" class="img-responsive" />
+                <div class="thongtin row">
+                    <ul class="text">
+                        <li class="vung">Hà Nội - Chùa Bái Đính</li>
+                        <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
+                        <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
+                        <li><span>Ngày xuất phát:</span> 30/1/2017</li>
+                        <li class="gia">5.300.000 vnđ</li>
+                    </ul>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                </div>
+            </div>
+
+            <!--Tour-->
+            <div class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <img src="~/Content/images/trangchu/avt-tour-4.png" alt="" class="img-responsive" />
+                <div class="thongtin row">
+                    <ul class="text">
+                        <li class="vung">Hà Nội - Cát Bà</li>
+                        <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
+                        <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
+                        <li><span>Ngày xuất phát:</span> 30/1/2017</li>
+                        <li class="gia">5.300.000 vnđ</li>
+                    </ul>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                </div>
+            </div>
+
+            <!--Tour-->
+            <div class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <img src="~/Content/images/trangchu/avt-tour-5.png" alt="" class="img-responsive" />
+                <div class="thongtin row">
+                    <ul class="text">
+                        <li class="vung">Hà Nội - Sapa</li>
+                        <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
+                        <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
+                        <li><span>Ngày xuất phát:</span> 30/1/2017</li>
+                        <li class="gia">5.300.000 vnđ</li>
+                    </ul>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                </div>
+            </div>
+
+            <!--Tour-->
+            <div class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <img src="~/Content/images/trangchu/avt-tour-1.png" alt="" class="img-responsive" />
+                <div class="thongtin row">
+                    <ul class="text">
+                        <li class="vung">Hà Nội - Đà Nẵng</li>
+                        <li><span>Mã Tour:</span> NĐ-TB-5N-5300</li>
+                        <li><span>Thời gian:</span> 5 ngày 4 đêm</li>
+                        <li><span>Ngày xuất phát:</span> 30/1/2017</li>
+                        <li class="gia">5.300.000 vnđ</li>
+                    </ul>
+                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                </div>
+            </div>
         </div>
     </article>
 </section>
