--- a/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link href="~/Content/dulichtrongnuoc.css" rel="stylesheet" />
     <link href="~/Content/dulichnuocngoai.css" rel="stylesheet" />
     <link href="~/Content/dulichmienbac.css" rel="stylesheet" />
+    <link href="~/Content/chitiettour.css" rel="stylesheet" />
 
     <script src="~/Scripts/Front/modernizr.custom.js"></script>
 
@@ -41,8 +42,9 @@
                     <li class="pull-left"><a href="@Url.Action("Dulichnuocngoai","Home")">Du lịch nước ngoài</a></li>
                     <li class="pull-left"><a href="@Url.Action("Dichvudulich","Home")">Dịch vụ du lịch</a></li>
                     <li class="pull-left"><a href="@Url.Action("Contact","Home")">Liên hệ</a></li>
-                    <li class="search pull-left"><a href="#"><i class="fa fa-search"></i></a></li>
-                    <li class="phone pull-left"><a href="tel:0313999999"><i class="fa fa-phone"></i>0313-999-999</a></li>
+                    <li class="search-box pull-left"><input type="text" placeholder="Nhập thông tin cần tìm..." id="search-inp" class="form-control" /></li>
+                    <li class="search pull-left"><a id="btn-search"><i class="fa fa-search"></i></a></li>
+                    <li class="phone pull-left"><a href="tel:0313999999"><i class="fa fa-phone"></i><p id="phone-num">0313-999-999</p></a></li>
                 </ul>
             </div>
 
@@ -328,6 +330,8 @@
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/Front/myScripts.js"></script>
     <script src="~/Scripts/Front/jquery.dlmenu.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.0/jquery-ui.min.js"integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="crossorigin="anonymous"></script>
 
     <script>
         $(function () {
