Sau khi adđ boostrap
Sau khi adđ boostrap

--- a/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Hoa Ban Travel</title>
-    @Styles.Render("~/Content/css")
+    
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/_Layout.css" rel="stylesheet" />
     <link href="~/Content/mobile-menu.css" rel="stylesheet" />
