--- a/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Hoa Ban Travel</title>
     @Styles.Render("~/Content/css")
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="~/Content/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/_Layout.css" rel="stylesheet" />
     <link href="~/Content/mobile-menu.css" rel="stylesheet" />
@@ -144,7 +145,7 @@
         </div>
 
         <!--Đặt vé-->
-        <div class="timkiem row">
+        <div class="timkiem col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <form>
 
                 <!--Loại tour-->
